--- a/maxima.spec.in
+++ b/maxima.spec.in
@@ -5,12 +5,12 @@
 %define enable_clisp 0
 %define clisp_flags --disable-clisp
 %define clisp_version 2.33
-%define enable_cmucl 1
-%define cmucl_flags --enable-cmucl
+%define enable_cmucl 0
+%define cmucl_flags --disable-cmucl
 %define enable_sbcl 0
 %define sbcl_flags --disable-sbcl
-%define enable_gcl 0
-%define gcl_flags --disable-gcl
+%define enable_gcl 1
+%define gcl_flags --enable-gcl
 
 # Inhibit automatic compressing of info files. Compressed info
 # files break maxima's internal help.
