%files exec_sbcl -> %file exec-sbcl (otherwise sbcl build fails).

--- a/maxima.spec.in
+++ b/maxima.spec.in
@@ -150,7 +150,7 @@ rm -rf $RPM_BUILD_ROOT
 %endif
 
 %if %{enable_sbcl}
-%files exec_sbcl
+%files exec-sbcl
 /usr/lib/maxima/%{version}/binary-sbcl/*
 %endif
 
