--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -37,4 +37,4 @@ clean-info:
 clean-html:
 	rm -f maxima*.html
 
-EXTRA_DIST = texi2html maximahtml.mk
+EXTRA_DIST = texi2html maximahtml.mk manual.css texi2html.init
