--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -1,4 +1,5 @@
-SUBDIRS = es pt
+# COMMENT OUT SUBDIRS UNTIL PROBLEM WITH TEXI2HTML VERSION IS RESOLVED 
+# SUBDIRS = es pt
 
 info_TEXINFOS = maxima.texi
 maxima_TEXINFOS = Introduction.texi Help.texi Command.texi Operators.texi \
