--- a/maxima.spec.in
+++ b/maxima.spec.in
@@ -2,12 +2,12 @@
 
 # By default, this spec file will generate RPMs for clisp
 # This can be changed by modifying the variables below.
-%define enable_clisp 0
-%define clisp_flags --disable-clisp
+%define enable_clisp 1
+%define clisp_flags --enable-clisp
 %define enable_cmucl 0
 %define cmucl_flags --disable-cmucl
-%define enable_sbcl 1
-%define sbcl_flags --enable-sbcl
+%define enable_sbcl 0
+%define sbcl_flags --disable-sbcl
 %define enable_gcl 0
 %define gcl_flags --disable-gcl
 
