--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -76,6 +76,11 @@ figures/plotting24.gif\
 figures/plotting25.gif\
 figures/orthopoly1.gif
 
+all-local: describe-index.lisp
+
+describe-index.lisp: maxima.info
+	perl ./build_index.pl maxima.info 'Function and Variable Index' > describe-index.lisp
+
 maximahtml.mk:
 	perl ./texi2html -split_chapter --lang=en --output=. --css-include=./manual.css --init-file ./texi2html.init maxima.texi 
 	rm -f maximahtml.mk
