--- a/doc/info/pt/Makefile.am
+++ b/doc/info/pt/Makefile.am
@@ -76,6 +76,11 @@ Trigonometric.texi \
 unit.texi \
 zeilberger.texi
 
+all-local: describe-index.lisp
+
+describe-index.lisp: maxima.info
+	perl ../build_index.pl maxima.info 'Índice de Funções e Variáveis' > describe-index.lisp
+
 maximahtml_pt.mk:
 	perl ../texi2html -split_chapter --lang=pt --output=. --css-include=../manual.css --init-file ../texi2html.init maxima.texi 
 	rm -f maximahtml_pt.mk
