Fix make targets install, clean, uninstall for describe-index

--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -100,15 +100,28 @@ $(MAXIMAHTML)\
 $(figurefiles)\
 contents.hhc index.hhk header.hhp maxima.hhp
 
+install-data-local: install-describe-index
+uninstall-local: uninstall-describe-index
+
+install-describe-index: describe-index.lisp
+	test -z "$(infodir)" || mkdir -p -- "$(DESTDIR)$(infodir)"
+	$(INSTALL_DATA) describe-index.lisp "$(DESTDIR)$(infodir)/describe-index.lisp"
+
+uninstall-describe-index: describe-index.lisp
+	rm -f "$(DESTDIR)$(infodir)/describe-index.lisp"
+
 clean-local: clean-info
 clean-local: clean-html
 
 clean-info:
 	rm -f maxima.info*
+	rm -f describe-index.lisp
 
 clean-html:
 	rm -f maxima*.html
 	rm -f contents.hhc
 	rm -f index.hhk
 
-EXTRA_DIST = texi2html maximahtml.mk manual.css texi2html.init $(genericdirDATA) create_index header.hhp maxima.hhp
+EXTRA_DIST = texi2html maximahtml.mk manual.css texi2html.init $(genericdirDATA) \
+    create_index header.hhp maxima.hhp describe-index.lisp
+
