binmode STDOUT, $infofile_encoding; to make generated Lisp index file have encoding corresponding to info input. Form of binmode argument is ":utf8" or ":crlf" (without < sign); adjust Makefiles accordingly.

--- a/doc/info/es/Makefile.am
+++ b/doc/info/es/Makefile.am
@@ -28,7 +28,7 @@ stringproc.texi     unit.texi                      zeilberger.texi     dynamics.
 all-local: describe-index.lisp
 
 describe-index.lisp: maxima.info
-	perl ../build_index.pl maxima.info 'Índice de Funciones y Variables' '<:crlf' > describe-index.lisp
+	perl ../build_index.pl maxima.info 'Índice de Funciones y Variables' ':crlf' > describe-index.lisp
 
 maximahtml.es.mk:
 	perl ../texi2html -split_chapter --lang=es --output=. --css-include=../manual.css --init-file ../texi2html.init maxima.texi 
