--- a/doc/info/pt/Makefile.am
+++ b/doc/info/pt/Makefile.am
@@ -79,7 +79,7 @@ zeilberger.texi
 all-local: describe-index.lisp
 
 describe-index.lisp: maxima.info
-	perl ../build_index.pl maxima.info 'Índice de Funções e Variáveis' '<:crlf' > describe-index.lisp
+	perl ../build_index.pl maxima.info 'Índice de Funções e Variáveis' ':crlf' > describe-index.lisp
 
 maximahtml_pt.mk:
 	perl ../texi2html -split_chapter --lang=pt --output=. --css-include=../manual.css --init-file ../texi2html.init maxima.texi 
