--- a/doc/info/Makefile.am
+++ b/doc/info/Makefile.am
@@ -79,7 +79,7 @@ figures/orthopoly1.gif
 all-local: describe-index.lisp
 
 describe-index.lisp: maxima.info
-	perl ./build_index.pl maxima.info 'Function and Variable Index' ':crlf' > describe-index.lisp
+	perl ./build_index.pl maxima.info ':crlf' > describe-index.lisp
 
 maximahtml.mk:
 	perl ./texi2html -split_chapter --lang=en --output=. --css-include=./manual.css --init-file ./texi2html.init maxima.texi 
